Fix styling on mobile view and add back header (#6)
* Fix styling on mobile view and add back header

* Switch section:before back to having height:

* This is to allow browsers to correctly scroll to anchor tags
* Essentially it adds in the header height (and then a negative margin
  top), so that the scroll goes to the actual content and isn't cut off
  by the header

---------

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -14,14 +14,21 @@ section:before {
   display: block;
   position: relative;
   width: 0;
-  height: 6em;
-  margin-top: -6em;
+  height: 8em;
+  margin-top: -8em;
+}
+
+@media (min-width: 640px) {
+  section:before {
+    height: 6em;
+    margin-top: -6em;
+  }
 }
 
 .embla {
   max-width: 70rem;
   margin: auto;
-  --slide-height: 19rem;
+  --slide-height: 100%;
   --slide-spacing: 1rem;
   --slide-size: 70%;
   --slide-spacing-xs: 1.2rem;
@@ -32,6 +39,12 @@ section:before {
   --slide-size-md: calc(100% / 3);
   --slide-spacing-lg: 2rem;
   --slide-size-lg: calc(100% / 3.5);
+}
+
+.embla__viewport {
+  overflow: hidden;
+  padding-top: 5px;
+  padding-bottom: 5px;
 }
 
 .embla__container {
